# oh-my-gitstats

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.claude/: settings.local.json
.syngia/: todos.json
src/oh_my_gitstats/: __init__.py  charts.py  cli.py  collector.py  constants.py  data.py  settings.py  template.html  visualizer.py
