[project]
name = "oh-my-gitstats"
version = "0.1.0"
description = "Git repository commit statistics collector and visualizer"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "gitpython>=3.1",
    "pyecharts>=2.0",
    "jinja2>=3.0",
]

[project.scripts]
gitstats = "oh_my_gitstats.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
